# batch-transcriber

./: .dockerignore  .gitignore  Makefile  README.md
.github/workflows/: docker-ui.yml  docker.yml  npm-analysis.yml  rust.yml  snyk.yml
deploy/dipolis/: .env.in  Makefile  Makefile.options.template  README.lt.md  docker-compose.yml
deploy/local/: Makefile  docker-compose.yaml
docs/: schema.md
transcriber/: Cargo.toml  Makefile
transcriber/migrations/2024-07-24-121255_work/: down.sql  up.sql
transcriber/migrations/2024-08-12-150236_work-error-field/: down.sql  up.sql
transcriber/src/: lib.rs
transcriber/src/asr/: clean_worker.rs  client.rs  mod.rs  res_worker.rs  worker.rs
transcriber/src/data/: api.rs
transcriber/src/file-adder/: main.rs
transcriber/src/filer/: file.rs
transcriber/src/model/: models.rs  schema.rs
transcriber/src/postgres/: queue.rs
transcriber/src/sound-keeper/: main.rs
transcriber/src/sound-keeper/handler/: error.rs  live.rs  mod.rs  upload.rs
transcriber/src/worker/: main.rs
upload-gui/: .env  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
upload-gui/app/: globals.css  layout.tsx  page-theme.tsx  page.tsx  utils.ts  version-logger.tsx
upload-gui/app/components/: Header.tsx  Success.tsx  Upload.tsx
upload-gui/app/success/: page.tsx
upload-gui/src/: Root.tsx  version-logger.tsx  version.ts
upload-gui/src/config/: index.ts
upload-gui/src/pages/About/: About.tsx
upload-gui/src/pages/Success/: Success.tsx
upload-gui/src/pages/Uploader/: Uploader.tsx
upload-gui/src/routes/: index.ts  types.ts
upload-gui/src/sections/Header/: Header.tsx
upload-gui/src/store/notifications/: types.ts
