[package]
name = "batch-transcriber"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
log = "0.4.22"
pgmq = "0.28.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = ["raw_value"] }
ulid = "1.1.3"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
chrono = "0.4.38"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
reqwest = { version = "0.12.5", features = ["multipart", "stream", "json"] }
again = { version = "0.1.2", features = ["rand"] }
rand = "0.8.5"
async-trait = "0.1.81"
anyhow = "1.0.86"
axum = { version = "0.7", features = ["multipart", "macros", "http2"] }
tower-http = { version = "0.5", features = ["limit", "timeout", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
tower = "0.4"
thiserror = "1.0.63"
futures = "0.3.30"
scopeguard = "1.2.0"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
test-case = "3.3.1"

[lib]
name = "transcriber"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

[[bin]]
name = "file-adder"
path = "src/file-adder/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "sound-keeper"
path = "src/sound-keeper/main.rs"
